<resources>
    <string name="app_name">DriverAssistantMobileApplication</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="driver_assistant">Driver Assistant</string>
    <string name="sign_in_with_your_account">Sign in with your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="logout">Logout</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="show_navigation">Show navigation drawer</string>
    <string name="hide_navigation">Hide navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="_100">100</string>
    <string name="driving_score">Driving Score</string>
    <string name="your_driving_score_is_calculated_taking_into_account_the_score_and_duration_of_each_driving_session">Your driving score is calculated taking into account the score and duration of each driving session.</string>
    <string name="traveled_distance">Traveled Distance</string>
    <string name="the_total_driving_distance_you_drove_with_our_application">The total driving distance you drove with our application.</string>
    <string name="_123_4_km">123.4 km</string>
    <string name="your_average_speed_over_all_your_driving_sessions">Your average speed over all your driving sessions</string>
    <string name="_75_km_h">75 km/h</string>
    <string name="_40">+40%</string>
    <string name="analysis_of_your_progress_over_last_10_driving_sessions">Analysis of your progress over last 10 driving sessions.</string>
    <string name="driving_style">Driving Style</string>
    <string name="welcome_back">Welcome back</string>
    <string name="would_you_like_to_drive_again_with_driver_assistant">Would you like to drive again with Driver Assistant?</string>
    <string name="start_driving_session">Start Driving Session</string>
    <string name="active_driving_session">Active Driving Session</string>
    <string name="did_you_arrive_at_destination">Did you arrive at destination?</string>
    <string name="finish_driving_session">Finish Driving Session</string>
    <string name="speed">Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="time_elapsed">Time elapsed</string>
    <string name="warnings">Warnings</string>
    <string name="danger_message">This is a warning. You were speeding by 15 km/h. You put your life in danger. Reduce speed.</string>
    <string name="driving_session">Driving Session</string>
    <string name="results">Results</string>
    <string name="_17_3_km">17.3 km</string>
    <string name="_01_24">01:24</string>
    <string name="_23_4_km_h">23.4 km/h</string>
    <string name="_16_warnings">16 Warnings</string>
    <string name="more_details">More Details</string>
    <string name="delete">Delete</string>
    <string name="_14th_july_2022">14th July 2022 14:27</string>
    <string name="back">Back</string>
    <string name="driving_session_details">Driving Session Details</string>
    <string name="see_detailed_map">See Detailed Map</string>
    <string name="learn">Learn</string>
    <string name="learn_how_to_drive_better">Become a better driver</string>
    <string name="improve_your_skills_long_text">Improving your driving skills does not mean only travelling more kilometers. You need to be aware of the car\'s physics and many other safety concepts that apply in this domain.</string>
    <string name="good_articles_long_text">We have prepared you a set of good articles to read, with video examples, in order to better understand your car.</string>
    <string name="wear_your_seatbelt_long_text">Wearing your seatbelt can really make the difference between death and minor injuries. Wear your seatbelt, always, even in the back seat!</string>
    <string name="wear_your_seatbelt_always">Wear your seatbelt. Always!</string>
    <string name="article_title">Article Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text. Lorem ipsum dolor with a lot of text.</string>
    <string name="return_string">Return</string>
    <string name="send_email">Send email</string>
    <string name="forgot_password_enter_your_email_please">Forgot password? Enter your email please.</string>
    <string name="last_position_known">Last known position of your vehicle</string>
    <string name="parking_position">Parking Position</string>
    <string name="slow_down_approach_the_curves_carefully">Slow down, approach the curves carefully!</string>
    <string name="understeering_long_text">Speeding into a curve might not be a good idea. In many cases, your car may understeer and fail to follow the desired trajectory.</string>
    <string name="seatbelt">Seatbelt</string>
    <string name="seatbelt_first_paragraph">Seatbelt should be worn at all times. According to a case study conducted by NHTSA in USA, the national use rate of the seatbelt in 2021 was at 90.4%. According to the same source, approximately 15.000 lives were saved by them and unfortunately, in more than 50% of the fatal accidents, the victims were not wearing a seatbelt. If you are not convinced yet, here are more reasons:</string>
    <string name="seatbelt_second_paragraph">"In case of an accident, not wearing your seatbelt may result in being totally ejected from the vehicle, which is extremely deadly. The whole safety system of your car is developed considering the passengers are wearing their seatbelts. In case of airbags deployment, their force may kill you. In an accident, acceleration may very a lot. A frontal accident may result in forces of 10g to 50g. That means your body weights more than 10 to 50 times than normal, basically you can be a projectile in the car. Not wearing your seatbelt in the back position, may result in both death of you and the passenger in front. More details can be followed in the video."</string>
    <string name="understeering">Understeering</string>
    <string name="understeering_first_paragraph">Understeering is one of the most common reasons for accidents. This is a physical phenomenon that happens when your car does not follow the desired trajectory due to momentum, steering angle and tires grip.To help you better understand the concept, we recommend you to follow the video below.</string>
    <string name="understeering_second_paragraph">To prevent understeering, please slow down before curves, especially when the asphalt might be wet or icy or there is snow on the road. Most of us probably experienced this already in the winter time, when there is snow on the road, and at slow speed trying to take a turn, the car does not respond as it should and it is going more in front, following inertia.</string>
    <string name="no_information_available">No information available.</string>
</resources>