<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingBottom="8dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                style="?attr/textAppearanceHeadline5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/driving_session" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_14th_july_2022"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="18dp"
                            android:orientation="horizontal">

                            <TextView
                                style="?attr/textAppearanceHeadline5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/_100" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:background="@android:color/transparent"
                                app:srcCompat="@drawable/ic_car" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="?attr/dividerHorizontal" />

                    <TextView
                        style="?attr/textAppearanceHeadline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/results" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_17_3_km" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_01_24" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_23_4_km_h" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_16_warnings" />
                    </com.google.android.material.chip.ChipGroup>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_details" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>